# xukang

./: README.md  pyproject.toml  tsad_template_README.md
intel_ontology_demo/: __init__.py  main.py  models.py  web_app.py
intel_ontology_demo/adapters/: __init__.py  extractors.py  kag_adapter.py
intel_ontology_demo/services/: data_ingestion.py  ontology_editor.py  pipeline.py  reasoning.py
intel_ontology_demo/ui/: console_view.py
tsad_template/: __init__.py  run_experiment.py
tsad_template/data/: datasets.py
tsad_template/evaluation/: metrics.py
tsad_template/models/: base.py  iforest.py
tsad_template/training/: runner.py
